# nestix-fmt

./: Cargo.toml  README.md
src/: format.rs  main.rs  syntax.rs
tests/: cli.rs
