[package]
name = "nestix-fmt"
version = "0.1.0"
edition = "2024"
description = "Formatter for the DSL embedded in Nestix layout! macros"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
ignore = "0.4.25"
proc-macro2 = { version = "1.0.103", features = ["span-locations"] }
syn = { version = "2.0.108", features = ["full"] }
